# Distribird

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bullshitbench_real_llm_results.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  publish.yml
.streamlit/: config.toml
assets/: docs.html
examples/: bullshitbench_run.py
examples/maize_bgcmuso/: demo.py  parameters.json
paper/: main.tex
scripts/: trace_run.py
src/distribird/: __init__.py  config.py  models.py
src/distribird/agent/: agents.py  deliberation.py  diagnostics.py  enrich.py  extract.py  fulltext.py  graph.py  llm_client.py  nodes.py  pipeline.py  prompts.py  ratelimit.py  search.py  search_openalex.py  state.py  synthesize.py  validity.py
src/distribird/api/: routes.py
src/distribird/distributions/: constraints.py  fitting.py  model_check.py  uninformative.py
src/distribird/export/: _util.py  json_export.py  python_export.py  r_export.py  table_export.py  trace_export.py
src/distribird/export/templates/: trace_viewer.html
src/distribird/ui/: app.py  persistence.py
src/litopri/: __init__.py  config.py  models.py
src/litopri/agent/: agents.py  deliberation.py  enrich.py  extract.py  fulltext.py  graph.py  nodes.py  pipeline.py  prompts.py  search.py  search_openalex.py  state.py  synthesize.py
src/litopri/api/: routes.py
src/litopri/distributions/: constraints.py  fitting.py  uninformative.py
src/litopri/export/: json_export.py  python_export.py  r_export.py
src/litopri/ui/: app.py  persistence.py
tests/: conftest.py  test_agents.py  test_api.py  test_bullshitbench.py  test_deliberation.py  test_diagnostics.py  test_enrich.py  test_export.py  test_extract.py  test_fitting.py  test_fulltext.py  test_graph.py  test_llm_client.py  test_model_check.py  test_models.py  test_nodes.py  test_persistence.py  test_pipeline.py  test_ratelimit.py  test_relevance.py  test_review_fixes.py  test_search.py  test_search_openalex.py  test_snowball.py  test_state.py  test_trace_export.py  test_validity.py
